Fix unlocalized texts on payments list and checkouts

--- a/src/main/resources/muro-messages.properties
+++ b/src/main/resources/muro-messages.properties
@@ -23,7 +23,7 @@ muro-pages=Page {0} of {1}
 product=Product
 code=code
 muro-page-amount=amount of pages
-total-price=total price (BCH)
+total-price-bch=total price (BCH)
 checkout=Checkout
 actions=actions
 buy=buy
