--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>cash.muro</groupId>
 		<artifactId>muro-parent-pom</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0-alpha2</version>
 	</parent>
 	<artifactId>muro.cash</artifactId>	
 	<name>muro.cash</name>
